--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,10 +41,8 @@ jobs:
         java-version: ${{ matrix.java }}
         cache: 'maven'
 
-    - name: Ensure dependencies are present
-      run: mvn -B dependency:resolve dependency:resolve-plugins --settings $SETTINGS_FILE -DskipTests=true -Dmaven.javadoc.skip=true
     - name: Compile
-      run: mvn clean install --settings $SETTINGS_FILE -DskipTests=true -Dmaven.javadoc.skip=true -P "!jsp-precompile"
+      run: mvn clean install --settings $SETTINGS_FILE -B -DskipTests=true -Dmaven.javadoc.skip=true -P "!jsp-precompile"
 
   test:
     needs: compile
@@ -101,10 +99,9 @@ jobs:
         cache: 'maven'
 
     - name: "Check: Code Style"
-      # Dependencies are such that compile needs to run before checkstyle
-      run: mvn checkstyle:check --settings $SETTINGS_FILE -DskipTests=true -P "!jsp-precompile"
+      run: mvn checkstyle:check --settings $SETTINGS_FILE
     - name: "Check: Documentation"
-      run: mvn javadoc:aggregate --settings $SETTINGS_FILE -P "!jsp-precompile"
+      run: mvn javadoc:aggregate --settings $SETTINGS_FILE
 
   minor-style:
     needs: compile
