Working towards reducing the number of duplicated model concepts
Includes moving more validation descriptors lower down the dependency
stack.

--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>Java-WebSocket</artifactId>
 				<version>1.5.3</version>
 			</dependency>
+			<dependency>
+				<groupId>jakarta.validation</groupId>
+				<artifactId>jakarta.validation-api</artifactId>
+				<version>2.0.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
