--- a/pom.xml
+++ b/pom.xml
@@ -585,6 +585,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						<excludes>
 							<!-- Files without comment formats should be excluded -->
 							<exclude>.github/*</exclude>
+							<exclude>.mvn/*</exclude>
 							<exclude>nbactions.xml</exclude>
 							<exclude>support/**</exclude>
 							<exclude>**/*.json</exclude>
