--- a/pom.xml
+++ b/pom.xml
@@ -337,24 +337,29 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.1</version>
-					<configuration>
-						<compilerArgs>
-							<arg>-XDcompilePolicy=simple</arg>
-							<arg>-Xplugin:ErrorProne</arg>
-						</compilerArgs>
-						<annotationProcessorPaths>
-							<path>
-								<groupId>com.google.errorprone</groupId>
-								<artifactId>error_prone_core</artifactId>
-								<version>${error-prone.version}</version>
-							</path>
-							<!-- Other annotation processors go here.
+					<executions>
+						<execution>
+							<id>default-compile</id>
+							<configuration>
+								<compilerArgs>
+									<arg>-XDcompilePolicy=simple</arg>
+									<arg>-Xplugin:ErrorProne</arg>
+								</compilerArgs>
+								<annotationProcessorPaths>
+									<path>
+										<groupId>com.google.errorprone</groupId>
+										<artifactId>error_prone_core</artifactId>
+										<version>${error-prone.version}</version>
+									</path>
+									<!-- Other annotation processors go here.
 
-							If 'annotationProcessorPaths' is set, processors will no longer be
-							discovered on the regular -classpath; see also 'Using Error Prone
-							together with other annotation processors' below. -->
-						</annotationProcessorPaths>
-					</configuration>
+									If 'annotationProcessorPaths' is set, processors will no longer be
+									discovered on the regular -classpath; see also 'Using Error Prone
+									together with other annotation processors' below. -->
+								</annotationProcessorPaths>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
