--- a/pom.xml
+++ b/pom.xml
@@ -327,6 +327,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>Java-WebSocket</artifactId>
 				<version>1.5.3</version>
 			</dependency>
+			<dependency>
+				<groupId>com.google.errorprone</groupId>
+				<artifactId>error_prone_annotations</artifactId>
+				<version>${error-prone.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
