Move the running of Error Prone to later in the build
Also make it only run when selected in a profile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,8 @@ jobs:
         java-version: ${{ matrix.java }}
         cache: 'maven'
 
+    - name: "Check: Error Prone"
+      run: mvn clean package -DskipTests=true -P "ErrorProne,!jsp-precompile" --settings $SETTINGS_FILE
     - name: "Check: Code Style"
       run: mvn directory:highest-basedir@find-root checkstyle:check --settings $SETTINGS_FILE
     - name: "Check: Documentation"
