--- a/pom.xml
+++ b/pom.xml
@@ -342,36 +342,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.1</version>
-					<executions>
-						<execution>
-							<id>default-compile</id>
-							<configuration>
-								<compilerArgs>
-									<arg>-XDcompilePolicy=simple</arg>
-									<!-- Options to EP must go in same arg. Ugh. -->
-									<arg>
-										-Xplugin:ErrorProne
-										<!-- Disable the MissingSummary check; we use an abbreviated
-											 documentation for getters, and its suggested replacement
-											 is terrible. -->
-										-Xep:MissingSummary:OFF
-									</arg>
-								</compilerArgs>
-								<annotationProcessorPaths>
-									<path>
-										<groupId>com.google.errorprone</groupId>
-										<artifactId>error_prone_core</artifactId>
-										<version>${error-prone.version}</version>
-									</path>
-									<!-- Other annotation processors go here.
-
-									If 'annotationProcessorPaths' is set, processors will no longer be
-									discovered on the regular -classpath; see also 'Using Error Prone
-									together with other annotation processors' below. -->
-								</annotationProcessorPaths>
-							</configuration>
-						</execution>
-					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -1024,6 +994,50 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						</configuration>
 					</plugin>
 				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>ErrorProne</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-compiler-plugin</artifactId>
+							<version>3.10.1</version>
+							<executions>
+								<execution>
+									<id>default-compile</id>
+									<configuration>
+										<compilerArgs>
+											<arg>-XDcompilePolicy=simple</arg>
+											<!-- Options to EP must go in same arg. Ugh. -->
+											<arg>
+												-Xplugin:ErrorProne
+												<!-- Disable the MissingSummary check; we use an abbreviated
+													 documentation for getters, and its suggested replacement
+													 is terrible. -->
+												-Xep:MissingSummary:OFF
+											</arg>
+										</compilerArgs>
+										<annotationProcessorPaths>
+											<path>
+												<groupId>com.google.errorprone</groupId>
+												<artifactId>error_prone_core</artifactId>
+												<version>${error-prone.version}</version>
+											</path>
+											<!-- Other annotation processors go here.
+
+											If 'annotationProcessorPaths' is set, processors will no longer be
+											discovered on the regular -classpath; see also 'Using Error Prone
+											together with other annotation processors' below. -->
+										</annotationProcessorPaths>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+				</pluginManagement>
 			</build>
 		</profile>
 	</profiles>
