--- a/pom.xml
+++ b/pom.xml
@@ -1004,10 +1004,37 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-compiler-plugin</artifactId>
-							<version>3.10.1</version>
 							<executions>
 								<execution>
 									<id>default-compile</id>
+									<configuration>
+										<compilerArgs>
+											<arg>-XDcompilePolicy=simple</arg>
+											<!-- Options to EP must go in same arg. Ugh. -->
+											<arg>
+												-Xplugin:ErrorProne
+												<!-- Disable the MissingSummary check; we use an abbreviated
+													 documentation for getters, and its suggested replacement
+													 is terrible. -->
+												-Xep:MissingSummary:OFF
+											</arg>
+										</compilerArgs>
+										<annotationProcessorPaths>
+											<path>
+												<groupId>com.google.errorprone</groupId>
+												<artifactId>error_prone_core</artifactId>
+												<version>${error-prone.version}</version>
+											</path>
+											<!-- Other annotation processors go here.
+
+											If 'annotationProcessorPaths' is set, processors will no longer be
+											discovered on the regular -classpath; see also 'Using Error Prone
+											together with other annotation processors' below. -->
+										</annotationProcessorPaths>
+									</configuration>
+								</execution>
+								<execution>
+									<id>default-testCompile</id>
 									<configuration>
 										<compilerArgs>
 											<arg>-XDcompilePolicy=simple</arg>
