--- a/keycloak-management-client/pom.xml
+++ b/keycloak-management-client/pom.xml
@@ -62,5 +62,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<artifactId>log4j-slf4j2-impl</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 </project>
