--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<version>1.5.3</version>
 			</dependency>
 			<dependency>
+				<groupId>jakarta.validation</groupId>
+				<artifactId>jakarta.validation-api</artifactId>
+				<version>2.0.2</version>
+			</dependency>
+			<dependency>
 				<groupId>com.google.errorprone</groupId>
 				<artifactId>error_prone_annotations</artifactId>
 				<version>${error-prone.version}</version>
