Fixed the validation substitution
It was missing a critical library and using something newer results in
Spring Boot not finding it and not configuring substitution to be
enabled; I hate SB when it is being that sort of magical.

Also fixed the trivial errors in the test input data.

--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>error_prone_annotations</artifactId>
 				<version>${error-prone.version}</version>
 			</dependency>
+			<dependency>
+				<!-- Has to be this old version for Spring Boot to find it -->
+				<groupId>org.glassfish</groupId>
+				<artifactId>javax.el</artifactId>
+				<version>3.0.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
