Stop logging-related warnings during testing

--- a/SpiNNaker-utils/pom.xml
+++ b/SpiNNaker-utils/pom.xml
@@ -45,6 +45,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<artifactId>error_prone_annotations</artifactId>
 		</dependency>
 		<dependency>
+			<!-- Enable processing of template substitutions in validation messages. -->
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.el</artifactId>
 			<scope>runtime</scope>
