--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<spring.security.version>5.7.3</spring.security.version>
 
 		<cxf.version>3.5.3</cxf.version>
-		<jackson.version>2.13.4</jackson.version>
+		<jackson.version>2.14.0-rc1</jackson.version>
 		<sqlite.version>3.39.3.0</sqlite.version>
 		<keycloak.version>19.0.3</keycloak.version>
 		<swagger.version>4.14.2</swagger.version>
