--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,12 @@ jobs:
     - name: Compile
       run: mvn clean install --settings $SETTINGS_FILE -B -DskipTests=true -Dmaven.javadoc.skip=true -P "!jsp-precompile"
     - name: Resolve Remaining Dependencies
-      run: mvn dependency:resolve-plugins dependency:resolve --settings $SETTINGS_FILE -B -P "CheckForFIXME,ErrorProne,KeycloakClient,devtools"
+      # Explicit get of error_prone_core because of MDEP-830
+      run: |
+        mvn dependency:resolve-plugins dependency:resolve --settings $SETTINGS_FILE -B -P "CheckForFIXME,ErrorProne,KeycloakClient,devtools"
+        mvn dependency:get --settings $SETTINGS_FILE -B -Dartifact=$EXTRA_ARTIFACT
+      env:
+        EXTRA_ARTIFACT: com.google.errorprone:error_prone_core:2.15.0
 
   test:
     needs: compile
