--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<swagger.version>4.14.2</swagger.version>
 		<jsontaglib.version>1.0.5</jsontaglib.version>
 		<jython.version>2.7.3</jython.version>
+		<!-- When you update this, check .github/workflows/build.yml too -->
 		<error-prone.version>2.15.0</error-prone.version>
 	</properties>
 
