--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<swagger.version>4.14.2</swagger.version>
 		<jsontaglib.version>1.0.5</jsontaglib.version>
 		<jython.version>2.7.3</jython.version>
-		<!-- When you update this, check .github/workflows/build.yml too -->
 		<error-prone.version>2.15.0</error-prone.version>
 	</properties>
 
@@ -1060,6 +1059,27 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						</plugin>
 					</plugins>
 				</pluginManagement>
+				<plugins>
+					<plugin>
+						<!-- Explicit get of error_prone_core because of MDEP-830 -->
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>fetch-error-prone</id>
+								<goals>
+									<goal>get</goal>
+								</goals>
+								<!-- This is NOT bound to a phase! -->
+								<configuration>
+									<groupId>com.google.errorprone</groupId>
+									<artifactId>error_prone_core</artifactId>
+									<version>${error-prone.version}</version>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
 			</build>
 		</profile>
 	</profiles>
