--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,12 @@
-*.sql linguist-language=SQL
+*.sql linguist-language=SQL linguist-detectable
 *.cff linguist-language=YAML
+*.json linguist-detectable
+*.xml linguist-detectable
+*.yml linguist-detectable
+*.cfg linguist-language=INI linguist-detectable
+*.properties linguist-language=Java-Properties linguist-detectable
+*.bin -linguist-generated
+*.boot -linguist-generated
+*.aplx -linguist-generated
+*.fig linguist-documentation
+SpiNNaker-py2json/src/main/python/enum.py linguist-vendored
