--- a/pom.xml
+++ b/pom.xml
@@ -473,6 +473,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<link>https://javaee.github.io/javaee-spec/javadocs/</link>
 							-->
 							<link>https://errorprone.info/api/latest/</link>
+							<link>https://javadoc.io/doc/javax.validation/validation-api/latest/</link>
+							<link>https://javadoc.io/doc/javax.ws.rs/javax.ws.rs-api/latest/</link>
 						</links>
 						<notimestamp>true</notimestamp>
 						<additionalOptions>
@@ -983,6 +985,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 								<link>https://javaee.github.io/javaee-spec/javadocs/</link>
 								<link>https://cxf.apache.org/javadoc/latest-3.0.x/</link>
 								<link>https://errorprone.info/api/latest/</link>
+								<link>https://javadoc.io/doc/javax.validation/validation-api/latest/</link>
+								<link>https://javadoc.io/doc/javax.ws.rs/javax.ws.rs-api/latest/</link>
 							</links>
 						</configuration>
 					</plugin>
