--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 		<cxf.version>3.5.4</cxf.version>
 		<jackson.version>2.14.0</jackson.version>
+		<jackson.doc.version>2.14</jackson.doc.version>
 		<sqlite.version>3.39.4.0</sqlite.version>
 		<keycloak.version>20.0.1</keycloak.version>
 		<swagger.version>4.15.0</swagger.version>
@@ -465,6 +466,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 								<packages>uk.ac.manchester.spinnaker.alloc*</packages>
 							</group>
 						</groups>
+						<!-- One of the ugly things is that we can't use standard package version numbers in these URLs -->
 						<links>
 							<link>https://docs.spring.io/spring-framework/docs/current/javadoc-api/</link>
 							<link>https://docs.spring.io/spring-security/site/docs/current/api/</link>
@@ -476,6 +478,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<link>https://errorprone.info/api/latest/</link>
 							<link>https://javadoc.io/doc/javax.validation/validation-api/latest/</link>
 							<link>https://javadoc.io/doc/javax.ws.rs/javax.ws.rs-api/latest/</link>
+							<link>https://fasterxml.github.io/jackson-core/javadoc/${jackson.doc.version}/</link>
+							<link>https://fasterxml.github.io/jackson-databind/javadoc/${jackson.doc.version}/</link>
 						</links>
 						<doclint>all</doclint>
 						<notimestamp>true</notimestamp>
@@ -996,6 +1000,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 								<link>https://errorprone.info/api/latest/</link>
 								<link>https://javadoc.io/doc/javax.validation/validation-api/latest/</link>
 								<link>https://javadoc.io/doc/javax.ws.rs/javax.ws.rs-api/latest/</link>
+								<link>https://fasterxml.github.io/jackson-core/javadoc/${jackson.doc.version}/</link>
+								<link>https://fasterxml.github.io/jackson-databind/javadoc/${jackson.doc.version}/</link>
 							</links>
 						</configuration>
 					</plugin>
