Need new versions of Spring Security and Spring Boot
They're not yet out. Time to twiddle my thumbs...

--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -380,9 +380,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>jakarta.mail</groupId>
+		    <artifactId>jakarta.mail-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
