--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<log4j.version>2.19.0</log4j.version>
 
 		<spring.version>6.0.0</spring.version>
-		<spring.boot.version>2.7.5</spring.boot.version>
+		<spring.boot.version>3.0.0</spring.boot.version>
 		<!--
 		DKF: if you update spring.boot.version, also update the annotation
 		  processor binding in Eclipse for SpiNNaker-allocserv:
@@ -54,7 +54,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		  Failure to do this leads to strange misbehaviour in tooltips when
 		  editing application.yml
 		-->
-		<spring.security.version>5.7.5</spring.security.version>
+		<spring.security.version>6.0.0</spring.security.version>
 
 		<cxf.version>3.5.4</cxf.version>
 		<jackson.version>2.14.0</jackson.version>
@@ -283,9 +283,19 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<version>${spring.security.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>javax</groupId>
-				<artifactId>javaee-api</artifactId>
-				<version>8.0.1</version>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
+				<version>6.0.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>jakarta.mail</groupId>
+			    <artifactId>jakarta.mail-api</artifactId>
+			    <version>2.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.cxf</groupId>
