Try to do auth using the (opaque) token introspection scheme
If this doesn't work, we'll need to poke the userinfo endpoint, as the
JWT doesn't always include all the claims we need.

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -271,5 +271,6 @@ spring:
         jwt:
           issuer-uri: ${spalloc.auth.openid.domain}
         opaquetoken:
+          introspection-uri: ${spalloc.auth.openid.domain}/protocol/openid-connect/token/introspect
           client-id: ${spalloc.auth.openid.id}
           client-secret: ${spalloc.auth.openid.secret}
