Much of the migration done
Might need fixing for validation (which would be update dependency
versions and changing "javax" to "jakarta" in a bunch of places). But
that's not critical yet because we're still blocked on CXF-8371
https://issues.apache.org/jira/projects/CXF/issues/CXF-8371

--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -428,8 +428,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
+		    <groupId>jakarta.servlet.jsp.jstl</groupId>
+		    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.web</groupId>
+		    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
