--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -199,8 +199,10 @@ spalloc:
     analysis-limit: 400
     # Whether to record and report statement execution time statistics
     performance-log: false
-    # Number of nanoseconds below which statement execution time is not important
-    performance-threshold: 1e6
+    # Whether to also write explanations of queries to the log for slow queries
+    auto-explain: true
+    # Number of microseconds below which statement execution time is not important
+    performance-threshold: 1e3
     # How many times to try to get a lock
     lock-tries: 3
     # Delay between a lock failure and the next attempt
