--- a/SpiNNaker-allocserv/src/test/resources/application-unittest.yml
+++ b/SpiNNaker-allocserv/src/test/resources/application-unittest.yml
@@ -29,3 +29,6 @@ spalloc:
       userinfo: file:/there-is-no-such-file.txt
   transceiver:
     dummy: true
+  sqlite:
+    performance-log: true
+    performance-threshold: 1e2
