--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -35,8 +35,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<start.class>uk.ac.manchester.spinnaker.alloc.ServiceConfig</start.class>
-		<!-- TLS-secured connection that we need to make at runtime startup. -->
-		<ebrains.wellknown.url>https://iam.ebrains.eu/auth/realms/hbp/.well-known/openid-configuration</ebrains.wellknown.url>
+		<!-- TLS-secured service that we need to talk to at runtime startup. -->
+		<ebrains.wellknown.server>iam.ebrains.eu</ebrains.wellknown.server>
+		<!-- https://iam.ebrains.eu/auth/realms/hbp/.well-known/openid-configuration -->
 		<truststore.file>${project.build.directory}/generated-resources/truststore.p12</truststore.file>
 		<truststore.pass>hunter2</truststore.pass>
 		<npm.command>build</npm.command>
@@ -177,9 +178,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						<configuration>
 							<truststoreFile>${truststore.file}</truststoreFile>
 							<truststorePassword>${truststore.pass}</truststorePassword>
-							<urls>
-								<url>${ebrains.wellknown.url}</url>
-							</urls>
+							<servers>
+								<server>${ebrains.wellknown.server}:443</server>
+							</servers>
 						</configuration>
 					</execution>
 				</executions>
