--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -52,6 +52,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    # CodeQL defaults to wrong version without this.
+    - name: Initialize Java
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
