--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<jsontaglib.version>1.0.5</jsontaglib.version>
 		<jython.version>2.7.3</jython.version>
 		<error-prone.version>2.17.0</error-prone.version>
+		<picocli.version>4.7.0</picocli.version>
 	</properties>
 
 	<dependencyManagement>
@@ -301,7 +302,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<dependency>
 				<groupId>info.picocli</groupId>
 				<artifactId>picocli</artifactId>
-				<version>4.7.0</version>
+				<version>${picocli.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.keycloak</groupId>
