Changes that work with MySQL

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -274,4 +274,4 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/spalloc
     username: spalloc
-    password: spa11oc
+    password: spalloc
