--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<error-prone.version>2.18.0</error-prone.version>
 		<picocli.version>4.7.1</picocli.version>
 		<mysql.version>8.0.32</mysql.version>
+		<testcontainers.version>1.17.6</testcontainers.version>
 	</properties>
 
 	<dependencyManagement>
