--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -312,6 +312,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			    <artifactId>mysql-connector-java</artifactId>
 			    <version>${mysql.version}</version>
 			</dependency>
+			<dependency>
+	            <groupId>org.testcontainers</groupId>
+	            <artifactId>testcontainers-bom</artifactId>
+	            <version>${testcontainers.version}</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+        	</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -488,6 +495,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.testcontainers</groupId>
+		    <artifactId>mysql</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.testcontainers</groupId>
+		    <artifactId>testcontainers</artifactId>
+		    <scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<description>A board allocation service for SpiNNaker.</description>
