Make historical database work

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -78,9 +78,9 @@ spalloc:
   database-path: ${spalloc.working-directory}/spalloc.sqlite3
   # Where is the (JDBC) datasource?
   datasource:
-      uri: jdbc:mysql://localhost:3306/spalloc
-      username: REPLACE_ME
-      password: REPLACE_ME
+    jdbc-url: jdbc:mysql://localhost:3306/spalloc
+    username: REPLACE_ME
+    password: REPLACE_ME
   # How long should long calls take before returning anyway?
   wait: 30s
   # Whether to pause ALL periodic callbacks; probably only useful for debugging
@@ -103,6 +103,11 @@ spalloc:
     # Cron-like expression to say when to run the migration task.
     # Defaults to overnight at 02:00 every day
     schedule: "0 0 2 * * *"
+    # The JDBC data source
+    datasource:
+      jdbc-url: jdbc:mysql://localhost:3306/spalloc_history
+      username: REPLACE_ME
+      password: REPLACE_ME
   keepalive:
     # How long between runs of the keepalive-expiry algorithm
     expiry-period: 30s
@@ -275,7 +280,3 @@ spring:
           hbp-ebrains:
             issuer-uri: ${spalloc.auth.openid.domain}
             user-name-attribute: preferred_username
-  datasource:
-    url: ${spalloc.datasource.uri}
-    username: ${spalloc.datasource.username}
-    password: ${spalloc.datasource.password}
