Make some links secure

--- a/SpiNNaker-allocserv/src/main/resources-filtered/swagger.properties
+++ b/SpiNNaker-allocserv/src/main/resources-filtered/swagger.properties
@@ -17,6 +17,6 @@ description = ${project.description}
 version = ${project.version}
 contact = ${project.organization.name}
 license = Apache License, Version 2.0
-license.url = http://www.apache.org/licenses/LICENSE-2.0
+license.url = https://www.apache.org/licenses/LICENSE-2.0
 # Link to terms of service, when we define them
 # terms.url = ???
