--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,7 @@ jobs:
       run: mvn javadoc:aggregate --settings $SETTINGS_FILE -P "!jsp-precompile"
     - name: Validate CITATION.cff
       if: matrix.java == 11
-      uses: dieghernan/cff-validator@2.3
+      uses: dieghernan/cff-validator@v2.3
 
   minor-style:
     needs: compile
