--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@ limitations under the License.
 				<scope>import</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-bom</artifactId>
+				<version>${spring.security.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
 	            <groupId>org.testcontainers</groupId>
 	            <artifactId>testcontainers-bom</artifactId>
 	            <version>${testcontainers.version}</version>
@@ -285,16 +292,6 @@ limitations under the License.
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-rt-frontend-jaxrs</artifactId>
 				<version>${cxf.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-core</artifactId>
-				<version>${spring.security.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-config</artifactId>
-				<version>${spring.security.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>jakarta.servlet</groupId>
